2006-01-17  David Kastrup  <dak@gnu.org>

	* preview.el (preview-TeX-style-cooked): New function, to be used
	later.  Just checked in so that nobody else feels compelled
	writing it.

2006-01-14  David Kastrup  <dak@gnu.org>

	* configure.ac: Remove infodir and INSTALL_INFO checks.  Don't
	check for TEXHASH if it is already set.

2006-01-13  David Kastrup  <dak@gnu.org>

	* preview.el (preview-parse-messages): Some ugly fix for
	`<xxx (PNG copy)>' style error messages.

2005-12-31  David Kastrup  <dak@gnu.org>

	* Makefile.in (ELCC, AUCTEX): Put "." in front of load-path to
	avoid picking up outdated `prv-*.el*' files from the installation
	directory.

2005-12-17  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* configure.ac: Bump version number.

2005-10-24  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* configure.ac: Import `TEX' in unquoted form.

2005-10-13  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* configure.ac: Change wrongly used `previewdatadir' to
	`previewlispdir'.
	Change version number in `AC_INIT'.

2005-10-03  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* prv-xemacs.el (preview-check-changes): Delete detached extents.

2005-09-27  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* configure.ac: Document option for specifying AUCTeX startfile as
	--with-previewstartfile, not --with-preview-startfile which does
	not work.
	Use matching package names for determining the kpathsea path
	separator both internally and in the option name which now is
	--with-kpathseasep.
	Fix the quadrigraph for the closing bracket in the
	kpathsesep-related error message.

2005-09-25  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* latex/preview.dtx: Add space for nicer formatting in version
	output.  Adapt checksum.

2005-09-25  David Kastrup  <dak@gnu.org>

	* latex/preview.dtx: Try fixing the release parsing/grouping.

2005-09-25  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* latex/README (CTAN): Bump version number.

	* latex/preview.dtx: Fix case in release tag parsing.

2005-09-24  David Kastrup  <dak@gnu.org>
