@@ -1,3 +1,7 @@
+2006-01-20  Reiner Steib  <Reiner.Steib@gmx.de>
+
+	* preview.el (preview-TeX-style-cooked): Fix cond expression.
+
 2006-01-17  David Kastrup  <dak@gnu.org>
 
 	* preview.el (preview-TeX-style-cooked): New function, to be used
